--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format:fix": "prettier --write --list-different .",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "predeploy": "pnpm run build",
+    "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.84.2",
@@ -36,6 +38,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.539.0",
